make sure the text is always behind the new scrolling TOC

--- a/www/templates/html/css/majors.css
+++ b/www/templates/html/css/majors.css
@@ -118,7 +118,6 @@ a.top {
 #maincontent p.requirement-sec-4 {
     margin:0 1em 0 0;
     display:block;
-    position:relative;
     clear:both;
 }
 
